Bug 400240 - Changing compositor animation speed settings causes currently opened Wayland windows minimize/maximize/unminimize without animation
Summary: Changing compositor animation speed settings causes currently opened Wayland ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-24 13:42 UTC by Alexander Mentyu
Modified: 2018-10-26 11:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-10-24 13:42:42 UTC
STEPS TO REPRODUCE
1. Change compositor speed
2. Minimize/maximize/unminimize currently opened wayland windows

OBSERVED RESULT
No animation for these windows

SOFTWARE VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
Qt Version: 5.11.2
KDE Frameworks Version: 5.52.0

ADDITIONAL INFORMATION
XWayland windows continue to minimize/maximize/unminimize with animations after changing compositor speed
Comment 1 Vlad Zahorodnii 2018-10-24 14:19:31 UTC
Hmm, looks like we're not connecting to existing wayland clients when creating EffectsHandler.
Comment 2 Martin Flöser 2018-10-24 15:41:38 UTC
(In reply to Vlad Zagorodniy from comment #1)
> Hmm, looks like we're not connecting to existing wayland clients when
> creating EffectsHandler.

Quite likely as initially we didn't support a compositor restart.
Comment 3 Vlad Zahorodnii 2018-10-26 11:48:45 UTC
Git commit 722af0215339e6555050fd50114ac4bf2fc921fe by Vlad Zagorodniy.
Committed on 26/10/2018 at 11:48.
Pushed by vladz into branch 'master'.

[effects] Recreate shell client connections after compositor settings have been changed

Summary:
If the animation speed was changed, then EffectsHandler will be destroyed
and created again.

Because we don't create connections to monitor state of Wayland clients
in EffectsHandler constructor, effects like the Magic lamp won't work
after changing compositor settings.

Test Plan:
* Changed animation speed;
* Minimized a Wayland client.

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D16401

M  +8    -0    effects.cpp

https://commits.kde.org/kwin/722af0215339e6555050fd50114ac4bf2fc921fe